updated transaction doc
